updated all files

--- a/.env
+++ b/.env
@@ -1,30 +1,13 @@
-# DB_HOST='srv1837.hstgr.io'
-# DB_USER='u869350139_rfid'
-# DB_PASSWORD='Nilesh@5800'
-# DB_NAME='u869350139_rfid_system'
-
-
-# PORT=5000
-
-# CONTROLLER_IP="192.168.1.66"
-# CONTROLLER_PORT=4370
-
-#PostgreSQL Local Database Configuration
-DB_HOST='localhost'
-DB_USER='postgres'           # Change this if your local PostgreSQL user is different
-DB_PASSWORD='Ct@123'  # Replace with your actual local PostgreSQL password
-DB_NAME='zkteco'        # Change as needed, e.g., create this DB in PostgreSQL
-
-
-
-# DB_HOST=localhost
-# DB_USER=postgres
-# DB_PASSWORD=Ct@123
-# DB_NAME=zkteco
+# PostgreSQL Railway Database Configuration
+DB_HOST=yamabiko.proxy.rlwy.net
+DB_USER=postgres
+DB_PASSWORD=db@1234
+DB_NAME=railway
+DB_PORT=14164
 
 # Server Configuration
 PORT=5000
 
-# Controller Configuration
-CONTROLLER_IP="192.168.1.66"
-CONTROLLER_PORT=4370
+# # Controller Configuration
+# CONTROLLER_IP="192.168.1.66"
+# CONTROLLER_PORT=4370
